Union del lector y de la interfaz al resto de estructuras

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,22 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Java_Proyecto2
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.4.jar=../../commons-collections4-4.4.jar
+file.reference.commons-compress-1.20.jar=../../commons-compress-1.20.jar
+file.reference.poi-5.0.0.jar=../../poi-5.0.0.jar
+file.reference.poi-ooxml-5.0.0.jar=../../poi-ooxml-5.0.0.jar
+file.reference.poi-ooxml-full-5.0.0.jar=../../poi-ooxml-full-5.0.0.jar
+file.reference.xmlbeans-4.0.0.jar=../../xmlbeans-4.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.20.jar}:\
+    ${file.reference.poi-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-full-5.0.0.jar}:\
+    ${file.reference.xmlbeans-4.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
